Fix stretched project image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2122,6 +2122,7 @@ body.is-preload #wrapper {
 	position: relative;
 	padding: 3.5em 2.5em 2.5em 2.5em;
 	width: 100%;
+	max-width: 900px;
 }
 
 #main>.panel.inactive {
